# IK-ROS2-Manipulator

./: README.md
ino/: arm-controller.ino
py/: main.py
src/controller/: arm_controller.ino
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/action/: InverseKinematics.action
src/my_robot_pkg/: CMakeLists.txt  ik_action_client.py  ik_action_server.py  package.xml  setup.py
src/my_robot_pkg/config/: config.yaml
src/my_robot_pkg/launch/: robot_spawn.launch.py
src/my_robot_pkg/worlds/: empty.sdf  robot.sdf
